--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/react-fontawesome": "0.0.20",
     "ajv": "^6.5.0",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
+    "express": "^4.16.3",
     "jquery": "^3.3.1",
+    "mongoose": "^5.1.4",
     "popper.js": "^1.14.3",
     "react": "^16.4.0",
     "react-autocomplete": "^1.8.1",
@@ -23,6 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node server"
   }
 }
