--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.4.0",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^0.32.1",
+    "react-date-picker": "^6.10.2",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
