--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^4.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "cloudinary-react": "^1.0.6",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -50,7 +51,9 @@
     "react-date-picker": "^6.10.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.0",
+    "react-dropzone": "^6.2.3",
     "react-router-dom": "^4.2.2",
+    "redux": "^4.0.1",
     "resolve": "1.6.0",
     "sass-loader": "^7.1.0",
     "style-loader": "0.19.0",
